--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-Flask
+Flask==1.1.2
 gunicorn==20.1.0
-matplotlib
-numpy
-pandas
-tensorflow
-yfinance 
-requests
-datetime
-keras
-sklearn
+click==7.1.2
+numpy==1.19.5
+pandas==1.1.3
+tensorflow==2.2.0
+yfinance==0.1.59
+requests==2.24.0
+Keras==2.4.3
+sklearn==0.0
