--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,9 @@ numpy==1.19.5
 click==7.1.2
 pandas==1.1.3
 tensorflow==2.2.0
+tensorboard==2.2.2
 yfinance==0.1.59
 requests==2.24.0
 Keras==2.4.3
 sklearn==0.0
+pip
