--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,11 @@
 runtime: python
-vm: false
+threadsafe: yes
+env: flex
 entrypoint: gunicorn -b :$PORT app:app
 
 runtime_config:
   python_version: 3
+
+handlers:
+- url: .*
+  script: app.app
