--- a/requirements.txt
+++ b/requirements.txt
@@ -1,160 +1,12 @@
-absl-py==0.10.0
-appdirs==1.4.4
-argon2-cffi==20.1.0
-astroid==2.4.2
-astunparse==1.6.3
-async-generator==1.10
-attrs==20.3.0
-autopep8==1.5.4
-backcall==0.2.0
-beautifulsoup4==4.9.3
-black==20.8b1
-bleach==3.2.1
-boto3==1.16.19
-botocore==1.19.19
-cached-property==1.5.2
-cachetools==4.1.1
-census==0.8.15
-certifi==2020.6.20
-cffi==1.14.3
-chardet==3.0.4
-chromedriver==2.24.1
-citipy==0.0.5
-click==7.1.2
-colorama==0.4.4
-configparser==3.8.1
-crayons==0.4.0
-cycler==0.10.0
-datadotworld==1.7.0
-datapackage==1.15.1
-decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
-et-xmlfile==1.0.1
-findspark==1.4.2
-Flask==1.1.2
-Flask-PyMongo==2.3.0
-flatbuffers==1.12
-future==0.18.2
-gast==0.3.3
-geojson==2.5.0
-gmaps==0.9.0
-google-auth==1.22.1
-google-auth-oauthlib==0.4.1
-google-pasta==0.2.0
-grpcio==1.32.0
-gunicorn==20.1.0
-h5py==2.10.0
-heroku==0.1.4
-idna==2.10
-ijson==3.1.2.post0
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-isort==5.6.4
-itsdangerous==1.1.0
-jdcal==1.4.1
-jedi==0.17.2
-Jinja2==2.11.2
-jmespath==0.10.0
-joblib==1.0.1
-jsonlines==1.2.0
-jsonpointer==2.0
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyterlab-pygments==0.1.2
-kdtree==0.16
-Keras==2.4.3
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-keyboard==0.13.5
-kiwisolver==1.2.0
-lazy-object-proxy==1.4.3
-linear-tsv==1.1.0
-lxml==4.6.2
-Markdown==3.3.1
-MarkupSafe==1.1.1
-matplotlib==3.3.2
-mccabe==0.6.1
-mistune==0.8.4
-multitasking==0.0.9
-mypy-extensions==0.4.3
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.2
-notebook==6.1.5
-numpy==1.19.5
-oauthlib==3.1.0
-opencv-contrib-python==4.4.0.46
-openpyxl==3.0.5
-opt-einsum==3.3.0
-packaging==20.4
-pandas==1.1.3
-pandocfilters==1.4.3
-parso==0.7.1
-pathspec==0.8.0
-pickleshare==0.7.5
-Pillow==8.0.0
-prometheus-client==0.8.0
-prompt-toolkit==3.0.8
-protobuf==3.13.0
-psycopg2==2.8.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle==2.6.0
-pycparser==2.20
-Pygments==2.7.2
-pylint==2.6.0
-pymongo==3.11.2
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.7.3
-pytz==2020.1
-pywinpty==0.5.7
-PyYAML==5.4.1
-pyzmq==19.0.2
-regex==2020.10.15
-requests==2.24.0
-requests-oauthlib==1.3.0
-rfc3986==1.4.0
-rsa==4.6
-s3transfer==0.3.3
-scikit-learn==0.24.1
-scipy==1.4.1
-seaborn==0.11.0
-selenium==3.141.0
-Send2Trash==1.5.0
-six==1.15.0
-sklearn==0.0
-soupsieve==2.1
-splinter==0.14.0
-SQLAlchemy==1.3.20
-tableschema==1.20.0
-tabulator==1.53.0
-tensorboard==2.2.2
-tensorboard-plugin-wit==1.7.0
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.1
-tornado==6.0.4
-traitlets==5.0.5
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-unicodecsv==0.14.1
-urllib3==1.25.10
-wcwidth==0.2.5
-webdriver-manager==3.2.2
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-xlrd==1.2.0
-yfinance==0.1.59
+python 3.5.0
+Flask==0.10.1
+gunicorn==19.1.1
+matplotlib
+numpy==1.19.2
+pandas==2.5.0
+tensorflow==1.5
+yfinance 
+requests
+datetime
+keras==2.0.0
+sklearn==0.24.1
